- iwlwifi-agn-ucode is renamed to iwlwifi-firmware (mga#22316)
- update list of modules needing firmware

Version 17.90 - 18 September 2017

- drakboot:
  o better read back config
  o fix undefined labels when eg: Xen is installed (mga#19014)
    drakboot crashed with "undefined value for mandatory argument 'text''

Version 17.88 - 7 July 2017

- translation updates

Version 17.85 - 22 June 2017

- don't overwrite custom grub2 settings when updating (mga#20596)
- recognize 8812au (mga#21043)

Version 17.84 - 5 June 2017

- translation updates

Version 17.83 - 4 June 2017

- drakclock:
  o fix crash introduced in 17.77 (mga#20956)

Version 17.82 - 6 May 2017

- drakboot:
  o add "please wait" message when running update-grub2
- service_harddrake:
  o require reboot if nokmsboot option changed (mga#20455).

Version 17.80 - 3 May 2017

- updated DE selection and advertising artwork for Mageia 6

Version 17.79 - 26 April 2017

- updated translation snapshot

Version 17.77 - 4 April 2017

- diskdrake:
  o don't require a BIOS boot partition when performing an upgrade (mga#20338)
  o make partitioning more robust with "Use entire disk" option (mga#20619):
    * add safety net for informing the kernel after writing a DOS partition
      table.
    * speed up proc_partitions::compare() and avoid unwanted udev events.
  o force reinitialisation of partition suggestions after wiping disk
    (mga#20621)
- various fixes to do_pkgs during Live installs (mga#20620):
  o fix do_pkgs_standalone::are_installed() for Live install
  o fix do_pkgs_standalone::remove() for Live install
  o fix fast path for do_pkgs::ensure_is_installed()
- drakclock:
  o fix the display of the clock (mga#11776)

Version 17.75 - 17 March 2017

- diskdrake:
  o allow a BIOS boot partition to be located on any disk (mga#20161)
  o ensure kernel is informed when a MBR partition table is cleared
  o clearing GPT partitions:
    * delay thus fix clearing GPT partitions (mga#20264)