@@ -298,8 +298,8 @@ sub read_grub2() {
     return if is_empty_hash_ref(\%bootloader) & !-s "$::prefix/boot/grub2/grub.cfg";
     my %h = getVarsFromSh("$::prefix/etc/default/grub");
     $bootloader{timeout} = $h{GRUB_TIMEOUT};
-    # on first run (during installer) or when migrating from grub-legacy or lilo:
-    $bootloader{default_append} ||= $::isInstall ? get_grub2_append(\%bootloader) : $h{GRUB_CMDLINE_LINUX_DEFAULT};
+    # keep suggested perImageAppend on first run (during installer) or when migrating from grub-legacy or lilo:
+    $bootloader{perImageAppend} ||= $h{GRUB_CMDLINE_LINUX_DEFAULT};
     $bootloader{entries} = [];
     my $entry;
     my $f = "$::prefix/boot/grub2/grub.cfg";
@@ -1269,6 +1269,8 @@ sub suggest {
     $bootloader->{method} ||= first(method_choices($all_hds, 1), # best installed
 				    method_choices($all_hds, 0)); # or best if no valid one is installed
 
+    $bootloader->{perImageAppend} = $bootloader->{entries}[0]{append};
+
     if (main_method($bootloader->{method}) eq 'grub') {
 	my %processed_entries = {};
 	foreach my $c (find_other_distros_grub_conf($fstab)) {	    
@@ -1904,7 +1906,7 @@ sub write_grub2_sysconfig {
     my $f = "$::prefix/etc/default/grub";
     my %conf = getVarsFromSh($f);
 
-    $conf{GRUB_CMDLINE_LINUX_DEFAULT} = $bootloader->{default_append} || get_grub2_append($bootloader);
+    $conf{GRUB_CMDLINE_LINUX_DEFAULT} = $bootloader->{perImageAppend} || get_grub2_append($bootloader);
     $conf{GRUB_GFXPAYLOAD_LINUX} = 'auto' if is_uefi();
     $conf{GRUB_DISABLE_RECOVERY} = 'false'; # for 'failsafe' entry
     $conf{GRUB_DEFAULT} //= 'saved'; # for default entry but do not overwrite user choice
