@@ -1,3 +1,6 @@
+- bootloader:
+  o Combine bootloader perImageAppend and default_append keys
+    (mga#21263, mga#21250)
 - iwlwifi-agn-ucode is renamed to iwlwifi-firmware (mga#22316)
 - update list of modules needing firmware
 
